--- a/part3/part3-notes-backend/package.json
+++ b/part3/part3-notes-backend/package.json
@@ -11,6 +11,7 @@
   "author": "Martin Henchoz",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
