--- a/part3/part3-notes-backend/package.json
+++ b/part3/part3-notes-backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node index.js admin2024",
+    "dev": "nodemon index.js admin2024",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../../part2/part2e-styles && npm run build && cp -r dist ../../part3/part3-notes-backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
@@ -14,7 +14,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
